--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -44,7 +44,8 @@
    "outputs": [],
    "source": [
     "# has to be in its own cell?\n",
-    "plt.rc('figure', figsize=(6.0, 3.0), dpi=150, autolayout=True)\n",
+    "dpi = 300\n",
+    "plt.rc('figure', figsize=(6.0, 3.0), dpi=dpi, autolayout=True)\n",
     "plt.rc('text', usetex=True)"
    ]
   },
@@ -175,7 +176,7 @@
     "ax.set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
     "plt.xlim(x_min, x_max)\n",
     "plt.ylim(-0.1, 1.1)\n",
-    "plt.savefig(\"data.png\")"
+    "fig.savefig(\"data.png\", dpi=dpi)"
    ]
   },
   {
@@ -203,7 +204,7 @@
     "ff, axes = plotspec(7)\n",
     "for ax in axes:\n",
     "    ax.plot(xs, true_spectrum(xs, 0.), \"r-\", alpha=0.5, lw=1, zorder=100)\n",
-    "ff.savefig(\"datazoom.png\")"
+    "ff.savefig(\"datazoom.png\", dpi=dpi)"
    ]
   },
   {
@@ -322,7 +323,7 @@
     "    axes[0].set_title(\"epoch {}\".format(j))\n",
     "    return fig\n",
     "fig = plot_ccf(best_doppler, ccs, ddp, ccp, r\"cross-correlation amplitude\")\n",
-    "fig.savefig(\"ccf.png\")"
+    "fig.savefig(\"ccf.png\", dpi=dpi)"
    ]
   },
   {
@@ -359,7 +360,7 @@
     "    plt.ylabel(\"residual $(\\widehat{v_r} - v_r)$ ($\\mathrm{m\\,s^{-1}}$)\")\n",
     "plot_resids(c * (best_ccf_dopplers - true_dopplers))\n",
     "plt.title(\"naive (but normalized) cross-correlation estimates\")\n",
-    "plt.savefig(\"ccfrvs.png\")"
+    "plt.savefig(\"ccfrvs.png\", dpi=dpi)"
    ]
   },
   {
@@ -459,7 +460,7 @@
     "plt.ylabel(\"radial velocity $v_r$ ($\\mathrm{m\\,s^{-1}}$)\")\n",
     "plt.title(\"Full toy-data dataset\")\n",
     "plt.legend()\n",
-    "plt.savefig(\"full.png\")"
+    "plt.savefig(\"full.png\", dpi=dpi)"
    ]
   },
   {
@@ -473,7 +474,7 @@
     "# plot the residuals of the ML RVs vs true RV\n",
     "plot_resids(c * (best_llf_dopplers - true_dopplers))\n",
     "plt.title(\"maximum-likelihood estimates\")\n",
-    "plt.savefig(\"mlrvs.png\")"
+    "plt.savefig(\"mlrvs.png\", dpi=dpi)"
    ]
   },
   {
@@ -619,7 +620,7 @@
     "        ax.fill_between([l - 0.5 * w, l + 0.5 * w], [h/hmax, h/hmax],\n",
     "                        color=\"r\", alpha=0.25, zorder=100)\n",
     "    ax.axhline(0., color=\"r\", alpha=0.5, lw=0.5)\n",
-    "ff.savefig(\"binarymask.png\")"
+    "ff.savefig(\"binarymask.png\", dpi=dpi)"
    ]
   },
   {
@@ -672,7 +673,7 @@
     "# plot the residuals of the wrongly optimized binary-mask CCF RVs vs true RV\n",
     "plot_resids(c * (best_wrong_bccf_dopplers - true_dopplers))\n",
     "plt.title(\"naively optimized binary-mask cross-correlation estimates\")\n",
-    "plt.savefig(\"bccfrvswrong.png\")"
+    "plt.savefig(\"bccfrvswrong.png\", dpi=dpi)"
    ]
   },
   {
@@ -698,7 +699,7 @@
     "# plot the residuals of the correctly-fit binary-mask RVs vs true RV\n",
     "plot_resids(c * (best_bccf_dopplers - true_dopplers))\n",
     "plt.title(\"Gaussian-fit binary-mask cross-correlation estimates\")\n",
-    "plt.savefig(\"bccfrvs.png\")"
+    "plt.savefig(\"bccfrvs.png\", dpi=dpi)"
    ]
   },
   {
@@ -775,7 +776,7 @@
     "for ax in axes:\n",
     "    ax.plot(xs, np.mean(empirical_spectra(xs, 0., ys, true_dopplers), axis=0), \"r-\",\n",
     "            alpha=0.5, lw=1)\n",
-    "ff.savefig(\"empirical.png\")"
+    "ff.savefig(\"empirical.png\", dpi=dpi)"
    ]
   },
   {
@@ -804,7 +805,7 @@
     "resids = c * (best_empirical_ccf_dopplers - true_dopplers)\n",
     "plot_resids(resids)\n",
     "plt.title(\"empirical-template cross-correlation estimates\")\n",
-    "plt.savefig(\"empiricalrvs.png\")"
+    "plt.savefig(\"empiricalrvs.png\", dpi=dpi)"
    ]
   },
   {
@@ -841,7 +842,7 @@
    "source": [
     "plot_resids(c * (best_calib_ccf_dopplers - true_dopplers))\n",
     "plt.title(\"calibration-noise-contaminated data\")\n",
-    "plt.savefig(\"calibration.png\")"
+    "plt.savefig(\"calibration.png\", dpi=dpi)"
    ]
   },
   {
@@ -878,7 +879,7 @@
     "axes[0].set_ylim(-0.1, 1.1)\n",
     "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
     "axes[0].set_title(r\"unmodeled telluric component\")\n",
-    "fig.savefig(\"telluricmodel.png\")"
+    "fig.savefig(\"telluricmodel.png\", dpi=dpi)"
    ]
   },
   {
@@ -899,7 +900,7 @@
    "source": [
     "plot_resids(c * (best_telluric_ccf_dopplers - true_dopplers))\n",
     "plt.title(\"telluric-contaminated data\")\n",
-    "plt.savefig(\"telluric.png\")"
+    "plt.savefig(\"telluric.png\", dpi=dpi)"
    ]
   },
   {
@@ -935,7 +936,7 @@
    "source": [
     "plot_resids(c * (best_variable_ccf_dopplers - true_dopplers))\n",
     "plt.title(\"spectral-variability-contaminated data\")\n",
-    "plt.savefig(\"variable.png\")"
+    "plt.savefig(\"variable.png\", dpi=dpi)"
    ]
   },
   {
